2009-04-07  Martin Leidig  <mleidig@schlund.de>

	Fixed method covariance problem: now we just skip all
	synthetic/bridge methods when introspecting a bean.

	Modified:
	* src/de/schlund/pfixcore/beans/BeanDescriptor.java
	* tests/junit/de/schlund/pfixcore/beans/BeanDescriptorTest.java

	Added:
	* tests/junit/de/schlund/pfixcore/oxm/CovariantBeanTest.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanA.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanB.java

2009-04-06  Michael Hartmeier <michael.hartmeier@1und1.de>

        Dump standalone.tomcat. It was always true since we have a war file build now.

2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl
	* src/org/pustefixframework/http/dereferer/DerefRequestHandler.java

2009-03-31  Michael Hartmeier <michael.hartmeier@1und1.de>

	* http://dev.pustefix-framework.org/wiki/ZeroFourteenZeroChangeLog:
        Switched from Ant to Maven

2009-03-20  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/main/java/org/pustefixframework/config/project/parser/EditorLocationParsingHandler.java: 
	* src/main/java/org/pustefixframework/config/project/EditorLocation.java: 
	* src/main/java/org/pustefixframework/config/project/parser/PustefixContextXMLRequestHandlerParsingHandler.java: 
	* src/main/java/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java: 
	* src/main/resources/META-INF/org/pustefixframework/config/project/parser/project-config.xml: 
	Read editor location from project.xml instead of global property.

2009-03-16  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/include.xsl: Added support for deferring includes
	until runtime by setting the 'pfx:include' element's 'level' attribute 
	to 'runtime'. The 'part' and 'href' values can be lately bound using
	the 'pfx:part' and 'pfx:href' elements, which are evaluated at
	runtime.

2009-03-11  Martin Leidig  <mleidig@schlund.de>
