@@ -24,8 +24,6 @@ import java.util.Properties;
 
 import org.pustefixframework.config.customization.CustomizationInfo;
 import org.pustefixframework.config.customization.PropertiesBasedCustomizationInfo;
-import org.pustefixframework.config.global.GlobalConfigurationHolder;
-import org.pustefixframework.config.global.parser.GlobalConfigurationReader;
 import org.pustefixframework.config.project.ProjectInfo;
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.config.BeanDefinitionHolder;
@@ -53,10 +51,9 @@ public class PustefixProjectBeanDefinitionReader extends AbstractBeanDefinitionR
         Properties buildTimeProperties = BuildTimeProperties.getProperties();
         CustomizationInfo info = new PropertiesBasedCustomizationInfo(buildTimeProperties);
         try {
-            GlobalConfigurationHolder globalConfig = (new GlobalConfigurationReader()).readGlobalConfiguration();
             Parser projectConfigParser = new ClasspathConfiguredParser("META-INF/org/pustefixframework/config/project/parser/project-config.xml");
             ProjectInfo projectInfo = new ProjectInfo(resource.getURL());
-            projectConfigTree = projectConfigParser.parse(resource.getInputStream(), info, globalConfig, getRegistry(), projectInfo);
+            projectConfigTree = projectConfigParser.parse(resource.getInputStream(), info, getRegistry(), projectInfo);
         } catch (ParserException e) {
             throw new BeanDefinitionStoreException("Error while parsing " + resource + ": " + e.getMessage(), e);
         } catch (IOException e) {
