@@ -1,23 +1,0 @@
-<?xml version="1.0"?>
-<configuration
-  xmlns="http://www.marsching.com/2008/flexiparse/configurationNS"
-  xmlns:p="http://www.pustefix-framework.org/2008/namespace/project-config"
->
-  
-  <!-- Defines static paths -->
-  <handler class="org.pustefixframework.config.global.parser.StaticPathParsingHandler">
-    <match>/p:global-config/p:application/p:static/p:path</match>
-  </handler>
-  
-  
-  <handler id="org.pustefixframework.config.customization.WhenParsingHandler" class="org.pustefixframework.config.customization.CustomizationWhenParsingHandler">
-    <match>/p:project-config/p:application/p:choose/p:when</match>
-    <match>/p:project-config/p:xml-generator/p:choose/p:when</match>
-  </handler>
-  
-  <handler id="org.pustefixframework.config.customization.OtherwiseParsingHandler" class="org.pustefixframework.config.customization.CustomizationOtherwiseParsingHandler">
-    <match>/p:project-config/p:application/p:choose/p:otherwise</match>
-    <match>/p:project-config/p:xml-generator/p:choose/p:otherwise</match>
-  </handler>
-  
-</configuration>
