@@ -1,34 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-
-<global-config xmlns="http://www.pustefix-framework.org/2008/namespace/project-config">
-  
-  <!-- prefix to namespace url mappings to be used in pages xml -->
-  <namespaces>
-    <namespace-declaration prefix="pfx" url="http://www.schlund.de/pustefix/core"/>
-    <namespace-declaration prefix="ixsl" url="http://www.w3.org/1999/XSL/Transform"/>
-  </namespaces>
-  
-  <http-server>
-    <tomcat>
-      <minprocessors>100</minprocessors>
-      <maxprocessors>500</maxprocessors>
-      <connectorport>8009</connectorport>
-      <debug>0</debug>
-      <loglevel>info</loglevel>
-      <jkhost>${fqdn}</jkhost>
-      <!-- This is only for mod_jk A matching sample workers.prop file will be generated, but may need -->
-      <!-- additional customization. Clustering will not work out of the box. -->
-      <jkmount>router</jkmount>
-      <defaulthost>sample1.${fqdn}</defaulthost>
-      <jvmroute>foo</jvmroute>
-    </tomcat>
-  </http-server>
-  
-  <application>
-    <static>
-      <path>core/img</path>
-      <path>core/script</path>
-    </static>
-  </application>
-  
-</global-config>
